@@ -34,9 +34,8 @@ public class CardapioRepositoryJDBC implements CardapioRepository{
         if (cardapios.isEmpty()) {
             return null;
         }
-        Cardapio cardapio = cardapios.getFirst();
-        List<Produto> produtos = produtosRepository.recuperaProdutosCardapio(id);
-        cardapio.setProdutos(produtos);
+        Cardapio cardapio = cardapios.get(0);
+        cardapio.setProdutos(produtosRepository.recuperaProdutosCardapio(cardapio.getId()));
         return cardapio;
     }
 
